# named-functions

./: .gitignore  .readme-template.md  .yamllint  CLAUDE.MD  CLAUDE.md  DENSIFY_ERROR_PRESERVATION_FIX.md  DENSIFY_ERROR_PRESERVATION_FIX_UPDATED.md  FIX_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE3_FINDINGS.md  PYPARSING_ENHANCEMENTS.md  README.md  TEST_RESULTS_PHASE1.md  densify.yaml  generate_readme.py  pyproject.toml  pytest.ini  test_blank_vs_errors.md  test_error_handling.md  test_error_replacement.md  unpivot.yaml
.claude/: settings.json
.claude/hooks/: gh-web-fallback.py  run-with-fallback.sh
.github/workflows/: ci.yml  claude.yml  generate-readme.yml  test.yml
formulas/: blank.yaml  blanktoempty.yaml  byrow_complete_only.yaml  byrow_nonempty_only.yaml  cellref.yaml  datarows.yaml  densify.yaml  densifyrows.yaml  diagnostic_blank.yaml  drop.yaml  dropcols.yaml  droprows.yaml  emptytoblank.yaml  error.yaml  errorfilter.yaml  errorsto.yaml  expand.yaml  groupby.yaml  headers.yaml  hstackblank.yaml  hstackfill.yaml  isblanklike.yaml  isomitted.yaml  nonerrorsto.yaml  omitcols.yaml  omitrows.yaml  percentof.yaml  rangeref.yaml  single.yaml  substitutemulti.yaml  take.yaml  takecols.yaml  takerows.yaml  textafter.yaml  textbefore.yaml  textsplit.yaml  trimrange.yaml  unpivot.yaml  vstackblank.yaml  vstackfill.yaml  (+1 more)
scripts/: __init__.py  formula_parser.py  generate_readme.py  lint_formulas.py  test_zero_arg_functions.py
tests/: CLAUDE.md  README.md  __init__.py  test_formula_parser.py  test_generate_readme_integration.py  test_linter.py
