[project]
name = "named-functions"
version = "0.1.0"
description = "Named Google Sheets formulas using LET and LAMBDA functions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "pyparsing>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
# Migrated from pytest.ini
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for complete workflows",
    "slow: Tests that take significant time to run",
]
